# socf-project

./: README.md  pyproject.toml
examples/: CSTR_Example.ipynb
src/socf/: __init__.py  core.py
src/socf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
